DB-3307: TableOperationSink: refactor: move logic related to the thread-local taskId stack to its own class.